--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   hive: ^2.2.3
   path_provider: ^2.1.5
+  oxidized: ^6.2.0
+  dio: ^5.7.0
 
 dev_dependencies:
   flutter_test:
