--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   dio: ^5.7.0
   flutter_bloc: ^8.1.4
   equatable: ^2.0.7
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
