--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^4.0.0
   flutter_launcher_icons: ^0.14.2
+  mocktail: ^1.0.4
+  bloc_test: ^9.1.7
+  build_runner: ^2.4.13
 
 flutter-icons:
   ios: true
